# aws-downscaler

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
aws_downscaler/: __init__.py  cli.py  config.py  schedule.py  time_window.py
aws_downscaler/resources/: asg.py  base.py  ecs.py
tests/: conftest.py  test_asg.py  test_base.py  test_config.py  test_ecs.py  test_schedule.py
